source/grammar/tests/invalid/statements/const.qasm
const myvar;
const myvar = ;
const myvar = 8.0;
input const myvar = 8;
output const myvar = 8;
const input myvar = 8;
const output myvar = 8;
